--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		    	output += "<li data-icon='false'><a href=#editnote  id=ag"+value.id +">"+value.title+"</a></li>"
 			}
 		}else{
-			output = "<li data-icon='false'><a href=#>No notes data</a></li>"
+			output = "<li data-icon='false'>No notes data</li>"
 		}
 	    $("#l_notes").html(output).listview("refresh");
 	}
