--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   	$(.title).bind()
   </script> -->
   <script>
-  	localStorage.removeItem("notes");
+  	//localStorage.removeItem("notes");
   	var Note = function(title, content){
   		this.id = "",
   		this.title = title,
